--- a/src/main/resources/templates/people/create.html
+++ b/src/main/resources/templates/people/create.html
@@ -2,27 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LOGIN</title>
+    <title>Add</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
 </head>
 <body>
+<h1 class="container text-center" >Nowy użytkownik</h1>
 
-<div class="container">
-    <h1>
-        Użytkownicy
-    </h1>
+<form class="container" th:action="@{/people/saveNewPerson}" method="post">
+    <label for="name">Nazwa</label>
+    <input class="form-control" name="name" />
+    <label for="password">Hasło</label>
+    <input class="form-control" name="password" />
 
-    <div th:each="p : ${people}">
-        <span th:text="${p.username}"></span> (<span th:text="${p.enabled}"></span>)
+    <button class="btn btn-primary" type="submit">Dodaj</button>
+</form>
 
-        <a th:href="@{'/people/disable?username=' + ${p.username}}"
-        class="btn btn-secondary">
-            Wyłącz
-        </a>
-    </div>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
 </body>
